--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -4,7 +4,7 @@
 [init]
 	defaultBranch = master
 [alias]
-    cam = !git commit -am $1
+    cam = commit -a -m
     lol = log --pretty=oneline --abbrev-commit --graph
     lg = !git --no-pager log --all --color --abbrev-commit --graph \
         --pretty=format:'%C(red)%h%Creset -%C(yellow)%d%Creset %s %C(green)(%cr)%Creset by $C(blue)%an%Creset' --
