--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -5,14 +5,11 @@
     defaultBranch = master
 [alias]
     cam = commit -a -m
-    camend = commit --amend -m
-    s = status
+    camend = commit --amend
     ssb = status -sb
-    p = push
-    d = diff
-    find = "!f() { git --no-pager log -S $1 --source --all; }; f"
-    last = !git --no-pager log -1 HEAD --stat
-    lol = !git --no-pager log --pretty=oneline --abbrev-commit --graph
-    lg = !git --no-pager log --all --color --abbrev-commit --graph \
+    find = log -S
+    last = log -1 HEAD --stat
+    lol = log --pretty=oneline --abbrev-commit --graph
+    lg = log --all --color --abbrev-commit --graph \
         --pretty=format:'%C(red)%h%Creset -%C(yellow)%d%Creset %s %C(green)(%cr)%Creset by $C(blue)%an%Creset' --
 
