added global gitignore, default editor in gitconfig

--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -3,6 +3,9 @@
     name = Tomas Kucharik
 [init]
     defaultBranch = master
+[core]
+	excludesfile = ~/.gitignore_global
+	editor = nvim
 [alias]
     cam = commit -a -m
     camend = commit --amend
