--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -1,3 +1,9 @@
+[mergetool "nvim"]
+	cmd = nvim -f -c \"Gdiffsplit!\" \"$MERGED\"
+[merge]
+	tool = nvim
+[mergetool]
+	prompt = false
 [user]
     email = tomas.kucharik@telekom.com
     name = Tomas Kucharik
@@ -6,6 +12,7 @@
 [core]
 	excludesfile = ~/.gitignore_global
 	editor = nvim
+	pager = diff-so-fancy | less --tabs=4 -RFX
 [alias]
     cam = commit -a -m
     camend = commit --amend
@@ -15,4 +22,22 @@
     lol = log --pretty=oneline --abbrev-commit --graph
     lg = log --all --color --abbrev-commit --graph \
         --pretty=format:'%C(red)%h%Creset -%C(yellow)%d%Creset %s %C(green)(%cr)%Creset by $C(blue)%an%Creset' --
-
+[pull]
+	rebase = true
+[interactive]
+	diffFilter = diff-so-fancy --patch
+[color]
+	ui = true
+[color "diff-highlight"]
+	oldNormal = red bold
+	oldHighlight = red bold 52
+	newNormal = green bold
+	newHighlight = green bold 22
+[color "diff"]
+	meta = 11
+	frag = magenta bold
+	func = 146 bold
+	commit = yellow bold
+	old = red bold
+	new = green bold
+	whitespace = red reverse
