--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -1,12 +1,15 @@
 set -ga terminal-overrides ",xterm-256color*:Tc"
 
-unbind C-b
-set-option -g prefix C-a
-bind-key C-a send-prefix
+# unbind C-b
+# set-option -g prefix C-a
+# bind-key C-a send-prefix
 set -g status-style 'bg=#333333 fg=#5eacd3'
 
 bind r source-file ~/.tmux.conf
 set -g base-index 1
+
+# set no escape time
+set -sg escape-time 0
 
 set-window-option -g mode-keys vi
 bind -T copy-mode-vi v send-keys -X begin-selection
