lsp updates, more themes, removed unused stuff

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -28,7 +28,8 @@ set -g focus-events on
 # # super useful when using "grouped sessions" and multi-monitor setup
 setw -g aggressive-resize on
 
-# set -g status-style 'bg=#333333 fg=#5eacd3'
+# Status line colors
+set -g status-style 'bg=#3D4552 fg=#5eacd3'
 
 set -g base-index 1
 
@@ -50,15 +51,5 @@ bind-key -T copy-mode-vi 'C-l' select-pane -R
 bind-key -T copy-mode-vi 'C-\' select-pane -l
 
 # set-window-option -g mode-keys vi
-# bind -T copy-mode-vi v send-keys -X begin-selection
-# bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel 'xclip -in -selection clipboard'
-
-# bind -r D neww -c "#{pane_current_path}" "[[ -e TODO.md ]] && nvim TODO.md || nvim ~/.dotfiles/todo.md"
-
-
-# List of plugins
-# set -g @plugin 'tmux-plugins/tpm'
-# set -g @plugin 'christoomey/vim-tmux-navigator'
-
-# # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
-# run '~/.tmux/plugins/tpm/tpm'
+bind -T copy-mode-vi v send-keys -X begin-selection
+bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel 'xclip -in -selection clipboard'
