--- a/tmuxinator/.config/tmuxinator/project.yml
+++ b/tmuxinator/.config/tmuxinator/project.yml
@@ -4,6 +4,6 @@ name: <%= @settings["name"] %>
 root: <%= @settings["workdir"] %>
 
 windows:
-  - nvim: nvim .
+  - nvim: nvim --startuptime startup.nvim .
   - terminal: null
 
