--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -29,7 +29,8 @@ set -g focus-events on
 setw -g aggressive-resize on
 
 # Status line colors
-set -g status-style 'bg=#3D4552 fg=#5eacd3'
+set -g status-style 'bg=#000000 fg=#5eacd3'
+set status-bg default
 
 set -g base-index 1
 
