feat/transparent tmux status line

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -25,12 +25,11 @@ set -g status-keys emacs
 # focus events enabled for terminals that support them
 set -g focus-events on
 
-# # super useful when using "grouped sessions" and multi-monitor setup
+# super useful when using "grouped sessions" and multi-monitor setup
 setw -g aggressive-resize on
 
-# Status line colors
-set -g status-style 'bg=#000000 fg=#5eacd3'
-set status-bg default
+# Transparent status line
+set-option -g status-style bg=default
 
 set -g base-index 1
 
